--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.3",
     "date-fns": "^2.11.1",
+    "jquery": "^3.5.1",
     "node-sass": "^4.13.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-date-range": "^1.0.3",
     "react-dom": "^16.13.1",
